Added andd configure the ssh private keypair in github action

--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -12,6 +12,7 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.aws_access_key }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_key }}
+      TF_VAR_awskey01: ${{ secrets.ssh_private_key }}
 
     steps:
       - name: Checkout
