--- a/.github/workflows/provision.yml
+++ b/.github/workflows/provision.yml
@@ -3,14 +3,14 @@ name: Provision three tier architecture using terraform
 
 on:
   workflow_dispatch:
-#   push:
-#     branches: [main]
+  push:
+    branches: [main]
 
 jobs:
   provision-three-tier:
     runs-on: ubuntu-latest
     env:
-      TF_VAR_mykey: ${{ secrets.ssh_private_key }}
+      TF_VAR_awskey01: ${{ secrets.ssh_private_key }}
       AWS_ACCESS_KEY_ID: ${{ secrets.aws_access_key }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_secret_key }}
       TF_VAR_db_user_name: ${{ secrets.db_user_name }}
