Used the public repo java-code for building  the artifact using githubaction mvn and stored  artifact in s3 bucket

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
 on:
-    push:
+    # push:
       # paths:
       #   - .github/workflows/build.yml
       #   - ../image-builder
-      branches: [main]
+      # branches: [main]
     workflow_dispatch:  
 jobs:
     provision-three-tier:
