--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,3 +13,22 @@ jobs:
           with:
             repository: rahuls512/java-app
             token: ${{ secrets.my_pat }}
+
+        - name: Setup JDK 8
+          uses: actions/setup-java@v3
+          with:
+              distribution: 'temurin'
+              java-version: '8'
+          
+        - name: build package
+          run: mvn clean package   
+        
+        - name: Configure AWS Credentials
+          uses: aws-actions/configure-aws-credentials@v2
+          with:
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+            aws-region: ap-south-1
+        
+        - name: deploy package
+          run: aws s3 cp target/*.war s3://rsinfotech-application-artifactstore  
