--- a/.github/workflows/packagev2.yaml
+++ b/.github/workflows/packagev2.yaml
@@ -27,7 +27,7 @@ jobs:
         
         - uses: actions/upload-artifact@v3
           with:
-            name: rsinfotech-artifact
+            name: my-artifact
             path: package
         
         - run: ls package
@@ -37,14 +37,14 @@ jobs:
           runs-on: ubuntu-latest
           needs: packagev2
           env:
-            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
-            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
             aws-region: ap-south-1
           steps: 
             - name: download artifact
               uses: actions/download-artifact@v3
               with:
-                name: rsinfotech-artifact
+                name: my-artifact
                 path: package
             
             - run: ls -R
