--- a/.github/workflows/packagev2.yaml
+++ b/.github/workflows/packagev2.yaml
@@ -1,53 +1,55 @@
+name: Package and Deploy
+
 on:
-    workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
-    packagev2:
-        name: packagev2
-        runs-on: ubuntu-latest
+  packagev2:
+    name: Package
+    runs-on: ubuntu-latest
     
-        steps:
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        
+      - name: Setup JDK 8
+        uses: actions/setup-java@v2
+        with:
+          java-version: 8
+        
+      - name: Build Package
+        run: mvn clean package
+        
+      - name: Create Directory
+        run: mkdir package && cp target/*.war package
+        
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: my-artifact
+          path: package
+        
+      - name: List Files
+        run: ls package
 
-        - name: checkout
-          uses: actions/checkout@master
-          with:
-            repository: rahuls512/java-db-Login
-
-        - name: Setup JDK 8
-          uses: actions/setup-java@v3
-          with:
-            distribution: 'temurin'
-            java-version: '8'
+  deploy-package:
+    name: Deploy to S3
+    runs-on: ubuntu-latest
+    needs: packagev2
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
+      AWS_DEFAULT_REGION: ap-south-1
+      
+    steps: 
+      - name: Download Artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: my-artifact
+          path: package
         
-        - name: build package
-          run: mvn clean package
-        
-        - name: create dir
-          run: mkdir package && cp target/*.war package
-        
-        - uses: actions/upload-artifact@v3
-          with:
-            name: my-artifact
-            path: package
-        
-        - run: ls package
-
-    deploy-package:
-          name: deploy-to-s3
-          runs-on: ubuntu-latest
-          needs: packagev2
-          env:
-            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-            aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-            aws-region: ap-south-1
-          steps: 
-            - name: download artifact
-              uses: actions/download-artifact@v3
-              with:
-                name: my-artifact
-                path: package
-            
-            - run: ls -R
+      - name: List Files
+        run: ls -R
                 
-            - name: deploy package
-              run: aws s3 cp package/*.war s3://rsinfotech-application-artifactstore
+      - name: Deploy Package
+        run: aws s3 cp package/*.war s3://rsinfotech-application-artifactstore
